<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.rahulkapoor.zeplinapp.OTP">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/at_toolbar"
            layout="@layout/actiontoolbar"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/otp_margin_start_end"
        android:layout_marginEnd="@dimen/otp_margin_start_end"
        android:orientation="vertical"
        >

    <LinearLayout
        android:layout_width="@dimen/forgot_pass_tv_width"
        android:layout_height="@dimen/forgot_pass_tv_height"
        android:layout_marginTop="@dimen/forgot_pass_tv_margin_top"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/otp1"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/otp2"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/otp3"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/user_name_margin_top"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <EditText
            android:layout_weight="1"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_weight="1"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_weight="1"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_weight="1"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_name_margin_top"
            android:text="@string/btn_confirm"
            android:textColor="@android:color/white"
            style="@style/button_style"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_name_margin_top"
            >

            <TextView
                android:id="@+id/tv_otp_change_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/otp_text"
                android:layout_alignParentStart="true"
                android:text="@string/otp_changeno"
                />

            <TextView
                android:id="@+id/tv_otp_resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                style="@style/otp_text"

                android:text="@string/otp_resend"
                />

        </RelativeLayout>


        </LinearLayout>


</LinearLayout>
