<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.rahulkapoor.zeplinapp.ResetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <include
        android:id="@+id/at_toolbar"
        layout="@layout/actiontoolbar"
        />
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/otp_margin_start_end"
    android:layout_marginEnd="@dimen/otp_margin_start_end"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/forgot_pass_et_margin_top"
    >
    <EditText
        android:drawableStart="@drawable/icon_password"
        android:id="@+id/etsetpassword"
        android:layout_marginStart="@dimen/forgot_pass_et_margin_start_end"
        android:layout_marginEnd="@dimen/forgot_pass_et_margin_start_end"
        android:layout_width="match_parent"
        android:drawablePadding="@dimen/icon_padding"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/set_password"
        />

    <EditText
        android:drawableStart="@drawable/icon_password"
        android:id="@+id/etresetpassword"
        android:layout_marginStart="@dimen/forgot_pass_et_margin_start_end"
        android:layout_marginEnd="@dimen/forgot_pass_et_margin_start_end"
        android:layout_width="match_parent"
        android:drawablePadding="@dimen/icon_padding"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/reset_password"
        />

    <Button
        android:id="@+id/btn_continue"
        android:layout_marginTop="@dimen/index_margin"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/forgot_pass_et_margin"
        android:layout_marginEnd="@dimen/forgot_pass_et_margin"
        android:background="@color/colorPrimary"
        android:text="@string/reset_ok"
        android:textSize="@dimen/index_text_size"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_height="@dimen/forgot_pass_btn_height" />


</LinearLayout>

</LinearLayout>
