<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.rahulkapoor.zeplinapp.ForgotPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<include
    android:id="@+id/at_toolbar"
    layout="@layout/actiontoolbar"
   />

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/forgot_pass_tv_width"
        android:layout_height="@dimen/forgot_pass_tv_height"
        android:layout_marginTop="@dimen/forgot_pass_tv_margin_top"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/forgot_pass_header"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forgot_pass_subheader"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            />

</LinearLayout>


        <EditText
            android:drawableStart="@drawable/icon_contact"
            android:id="@+id/etphone"
            android:layout_marginStart="@dimen/forgot_pass_et_margin_start_end"
            android:layout_marginEnd="@dimen/forgot_pass_et_margin_start_end"
            android:layout_width="match_parent"
            android:drawablePadding="@dimen/icon_padding"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:hint="Contact Number"
            />


    <TextView
        android:layout_marginTop="@dimen/index_margin"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/forgot_pass_et_margin"
        android:layout_marginEnd="@dimen/forgot_pass_et_margin"
        android:background="@color/colorPrimary"
        android:text="@string/forgot_pass_btn"
        android:textSize="@dimen/index_text_size"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_height="@dimen/forgot_pass_btn_height" />


</LinearLayout>
