<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/designView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.rahulkapoor.zeplinapp.IndexActivity">

    <ImageView
        android:id="@+id/im_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/imageLogoEnd"
        android:layout_marginStart="@dimen/imageLogoStart"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/index_margin"
        android:layout_marginRight="@dimen/index_margin"
        android:layout_marginTop="@dimen/index_margin"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etEmail"
            android:drawableStart="@drawable/icon_email"
            android:drawablePadding="@dimen/icon_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:hint="Email address" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/index_margin"
        android:layout_marginRight="@dimen/index_margin"
        android:layout_marginTop="@dimen/index_margin_top_pass"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:hint="Password"
            android:drawableStart="@drawable/icon_password"
            android:drawablePadding="@dimen/icon_padding"
            android:inputType="textPassword"
            />


    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/index_margin"
        android:layout_marginRight="@dimen/index_margin"
        android:background="@color/colorPrimary"
        android:text="@string/splash_login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_forgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/splash_signup_margin"
        android:text="@string/index_forgot_pass"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/index_text_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_goto_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/index_ask_signup"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/index_text_size" />

    </RelativeLayout>


</LinearLayout>
