<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
            android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
        <include
            layout="@layout/actiontoolbar"
            />

   </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:weightSum="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_weight="0.4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/user_image_height_width"
                    android:layout_height="@dimen/user_image_height_width"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/signup_margin_bottom"
                    android:layout_marginTop="@dimen/image_icon_margin_top"
                    android:src="@drawable/user_placeholder" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/user_name"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/index_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/user_name_margin_top"
                    android:gravity="center"
                    android:text="@string/edit_profile"
                    android:textSize="@dimen/index_text_size" />

            </LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.5"
    android:orientation="vertical"
    >
            <ListView
                android:id="@+id/lv_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white">

            </ListView>

</LinearLayout>

            <LinearLayout
                android:layout_weight="0.1"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/text_support"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    />

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:src="@drawable/call_icon_pressed"
                    android:layout_marginBottom="@dimen/signup_margin_bottom"
                    />

            </LinearLayout>


        </LinearLayout>

    </android.support.design.widget.NavigationView>



</android.support.v4.widget.DrawerLayout>